--- a/src/app/cuentas-personales/componentes/cuentas-personales-nuevo/cuentas-personales-nuevo.component.html
+++ b/src/app/cuentas-personales/componentes/cuentas-personales-nuevo/cuentas-personales-nuevo.component.html
@@ -2,11 +2,11 @@
 
     <form [formGroup]="formGroup">
 
-    <div class="card-header h4" style="background:url(../../../../assets/images/fondos/{{bgButtons}}) no-repeat; background-size: 100%; background-position: top;">
-        <div style="text-shadow: 1px 2px white">Ingresar una nueva cuenta financiera personal</div>
+    <div class="card-header h4" style="background:url(assets/images/fondos/{{bgButtons}}) no-repeat; background-size: 100%; background-position: top;">
+        <div style="text-shadow: 1px 1px white">Ingresar una nueva cuenta financiera personal</div>
     </div>
 
-    <div class="card-body" style="background:url(../../../../assets/images/fondos/freepiks/4907157.jpg) no-repeat; background-size: 200%;">
+    <div class="card-body" style="background:url(assets/images/fondos/freepiks/4907157.jpg) no-repeat; background-size: 200%;">
 
         <div class="form-row">
             <div class="form-group col-12 col-md-6">
@@ -44,7 +44,7 @@
             </div>
             <div class="form-group col-12 col-md-6">
                 <label>Institución financiera</label>
-                <select formControlName="financiera" name="financiera" class="form-control" tabindex="4">
+                <select formControlName="financiera" name="financiera" class="form-control" tabindex="4" [compareWith]="compararFinancieras">
                     <option disabled>Seleccione una financiera</option>
                     <option *ngFor="let itemF of financieras">{{itemF.financiera}}</option>
                 </select>
@@ -96,7 +96,7 @@
 
     </div>
 
-    <div class="card-footer d-flex justify-content-end" style="background:url(../../../../assets/images/fondos/{{bgButtons}}) no-repeat; background-size: 100%; background-position: bottom;">
+    <div class="card-footer d-flex justify-content-end" style="background:url(assets/images/fondos/{{bgButtons}}) no-repeat; background-size: 100%; background-position: bottom;">
         <button class="btn btn-secondary mr-2 rounded" tabindex="11" (click)="onCancel()">
             Cancelar
         </button>
