--- a/src/app/cuentas-personales/componentes/cuentas-personales-ui/cuentas-personales-ui.component.html
+++ b/src/app/cuentas-personales/componentes/cuentas-personales-ui/cuentas-personales-ui.component.html
@@ -1,5 +1,5 @@
 <!-- CHEQUES DISPONIBLES -->
-<div class="card mt-3" style="border: purple solid 2px !important" style="background:url(../../../../assets/images/fondos/freepiks/white-2723481_1920.jpg) no-repeat; background-size: 200%;">
+<div class="card mt-3" style="border: purple solid 2px !important" style="background:url(assets/images/fondos/freepiks/white-2723481_1920.jpg) no-repeat; background-size: 200%;">
     <div class="card-header purple darken-2 white-text d-flex justify-content-between align-items-center">
         <strong>
             Cuentas financieras personales
